--- a/doc/orchaRd.Rmd
+++ b/doc/orchaRd.Rmd
@@ -155,7 +155,7 @@ Our orchard plot for the log coefficient of variation demonstrates that, while r
 
 In many circumstances we want to present both the overall mean meta-analytic estimate (i.e., our intercept-only model) and the mean effect size in different levels of our categorical moderator variable. This provides overall support across all studies included in the meta-analysis while effects across different levels of our categorical variable provide more detailed information about how mean effect size might vary across different groups. 
 
-```{r Figure8, fig.width = 7, fig.height = 8, fig.cap = "\\label{fig:Figure8}Orchard plot of overall mean SMD for the impact of diet quality on lifespan (bottom) and the effect of different diet manipulations on lifespan (middle and bottom)"}
+```{r Figure4, fig.width = 7, fig.height = 8, fig.cap = "\\label{fig:Figure4}Orchard plot of overall mean SMD for the impact of diet quality on lifespan (bottom) and the effect of different diet manipulations on lifespan (middle and top)"}
 
 # We will re-fit the meta-analytic and meta-regression models without the intercept just to remind the reader what models we would like to compare
 
@@ -182,7 +182,8 @@ orchard_plot(res_MA_MR_merged,
 scale_y_discrete(labels = c("Intrcpt" = "Overall"))
 
 ```
-Figure \ref{fig:Figure8} now provides the overall mean estimate and the mean estimate in each level of the diet manipulation categories in one figure. These combined figures are more typical of what readers can expect in meta-analytic papers.
+
+Figure \ref{fig:Figure4} now provides the overall mean estimate and the mean estimate in each level of the diet manipulation categories in one figure. These combined figures are more typical of what readers can expect in meta-analytic papers.
 
 #### Example 2: Predation and Invertebrate Community 
 
@@ -224,9 +225,9 @@ eklof_MR <- rma.mv(
 
 ```
 
-Above we have fit a meta-regression model using "Grazer Type" as a moderator which is predicted to explain variation in log response ratios. We can demonstrate a few simple changes users can make, but we note here that users can make far more complex changes down the line if needed, but we'll save explaining these more complex changes for the last example. The first is the angle at which the y-axis labels are positioned (bottom of Figure \ref{fig:Figure4}):
+Above we have fit a meta-regression model using "Grazer Type" as a moderator which is predicted to explain variation in log response ratios. We can demonstrate a few simple changes users can make, but we note here that users can make far more complex changes down the line if needed, but we'll save explaining these more complex changes for the last example. The first is the angle at which the y-axis labels are positioned (bottom of Figure \ref{fig:Figure5}):
 
-```{r Figure4, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure4}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes"}
+```{r Figure5, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure5}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes"}
 
 p3 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)", 
   transfm = "none") 
@@ -238,9 +239,9 @@ p3/p4
 
 ```
 
-The other thing we can change is the type of scaling we wish to use. Let's say we are interested in scaling the effect size by the total sample size of the study we use a vector of N, sample size (bottom of Figure \ref{fig:Figure5}):
+The other thing we can change is the type of scaling we wish to use. Let's say we are interested in scaling the effect size by the total sample size of the study we use a vector of N, sample size (bottom of Figure \ref{fig:Figure6}):
 
-```{r Figure5, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure5}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes and scaling with sample size instead of precision"}
+```{r Figure6, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure6}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes and scaling with sample size instead of precision"}
 
 p5 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)", 
   transfm = "none") 
@@ -273,16 +274,16 @@ summary(lim_MR)
 
 Now we can plot a default orchard plot, scaling each effect size by N. Also, because we are using Zr, we can use transfm = "tanh" and it will do the conversions for us:
 
-```{r Figure6, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure6}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
+```{r Figure7, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure7}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
 orchard_plot(lim_MR,
   mod = "Phylum", xlab = "Correlation coefficient",
   alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = FALSE
 )
 ```
 
-Now that we have Figure \ref{fig:Figure6} we can do some small changes to make it pretty. Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot2` we can add elements to the figure to make it look pretty. 
+Now that we have Figure \ref{fig:Figure7} we can do some small changes to make it pretty. Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot2` we can add elements to the figure to make it look pretty. 
 
-```{r Figure7, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure7}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
+```{r Figure8, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure8}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
 orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)", 
              transfm = "tanh", angle = 45, N = lim$N, cb = TRUE) +
   theme(
@@ -301,7 +302,7 @@ orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)",
   scale_x_continuous(expand = c(0.1, 0.1))
 ```
 
-As in Figure \ref{fig:Figure7}, New elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements, often telling you it does so with warning messages (these are nothing to be concerned about in most cases). 
+As in Figure \ref{fig:Figure8}, New elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements, often telling you it does so with warning messages (these are nothing to be concerned about in most cases). 
 
 From our orchard plots above, it is clear that the analysis is dominated by data from chordates and arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
 
